fluxcd/01-infrastructure/rook-ceph/referencegrant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: ceph-to-shared-gateway
  namespace: gateway-system
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: rook-ceph
  to:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: shared-gateway
