fluxcd/01-infrastructure/rook-ceph/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ceph-dashboard
  namespace: rook-ceph
spec:
  hostnames:
    - ceph.civilsnut.se
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: shared-gateway
      namespace: gateway-system
  rules:
    - backendRefs:
        - name: rook-ceph-mgr-dashboard
          port: 7000
      matches:
        - path:
            type: PathPrefix
            value: /
